Hola a la página principal
agrego hola a la págna principal

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudio fotográfico</title>
 </head>
 <body>
     <h1>Bienvenido al estudio fotográfico foto10000</h1>
+    <p>Hola</p>
 </body>
 </html>
